2009-01-29  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 567792 – gio.InputStream.read_async can cause memory
	corruption

	* gio/gio.override (py_decref_callback): Remove (unused now).
	(pygio_notify_allocate_buffer, pygio_notify_attach_to_result)
	(pygio_notify_get_attached): New functions.
	(async_result_callback_marshal): Attach to the result object if
	asked and then don't free self.  Fix reference leak (spotted by
	Gustavo).

	* gio/ginputstream.override (async_result_callback_marshal_read):
	Remove.  Use new attachment functionality in
	async_result_callback_marshal() instead.
	(_wrap_g_input_stream_read_async): Use the new functions (also
	those mentioned in the cleanup log below).
	(_wrap_g_input_stream_read_finish): Use the new functions.

2009-01-27  Daniel Elstner  <danielk@openismus.com>

	* codegen/docextract_to_xml.py (escape_text): Do not escape the
	ampersand "&" in entity references (bug #568485).  Replace some
	unusual entity references in the output with their literal values.

2009-01-14  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566571 – gtk.Buildable interface method override is not
	recognized

	* gobject/gobjectmodule.c (pyg_type_add_interfaces): New function,
	break out code repetition out of pyg_type_register().

	* tests/test_subtype.py
	(TestSubType.test_gtk_buildable_virtual_method): New test
	case (inactive).

2009-01-14  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566706 – cleanup GIO overrides

	* gio/gio.override (pygio_notify_new)
	(pygio_notify_using_optional_callback)
	(pygio_notify_callback_is_valid_full)
	(pygio_notify_callback_is_valid)
	(pygio_notify_reference_callback): New functions.
	(pygio_notify_free): Rename from pygio_free_notify() and extend.
	(async_result_callback_marshal): Warn if new `referenced' field is
	not set (programming error).
	(_wrap_g_drive_eject, _wrap_g_drive_poll_for_media)
	(_wrap_g_mount_unmount, _wrap_g_mount_eject)
	(_wrap_g_mount_remount): Lots of cleanup: use new functions